--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <h1 class="title">Tic-Tac-Toe!</h1>
     </header>
     <main>
-        <div class="display-message"></div>
+        <div class="display-message">Player X's Turn!</div>
         <div class="container">
-            <div class="cells" data-index="0"></div>
-            <div class="cells" data-index="1"></div>
-            <div class="cells" data-index="2"></div>
-            <div class="cells" data-index="3"></div>
-            <div class="cells" data-index="4"></div>
-            <div class="cells" data-index="5"></div>
-            <div class="cells" data-index="6"></div>
-            <div class="cells" data-index="7"></div>
-            <div class="cells" data-index="8"></div>
+                <div class="cells" data-index="0"></div>
+                <div class="cells" data-index="1"></div>
+                <div class="cells" data-index="2"></div>
+                <div class="cells" data-index="3"></div>
+                <div class="cells" data-index="4"></div>
+                <div class="cells" data-index="5"></div>
+                <div class="cells" data-index="6"></div>
+                <div class="cells" data-index="7"></div>
+                <div class="cells" data-index="8"></div>
         </div>
         <button class="restartBtn">Restart</button>
     </main>
